<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CapturaActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="405dp"
        android:layout_height="727dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/definitvo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="236dp"
        android:layout_height="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/cap"
        android:textColor="#0B0B0B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/nombreh"
        android:inputType="text"
        android:textColor="#141313"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txtedad"
        android:layout_width="296dp"
        android:layout_height="63dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/edadh"
        android:inputType="text"
        android:textColor="#101010"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnombre" />

    <EditText
        android:id="@+id/txtcorreo"
        android:layout_width="273dp"
        android:layout_height="58dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/Correoh"
        android:inputType="text"
        android:textColor="#1D1C1C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtedad" />

    <Button
        android:id="@+id/btnregresarc"
        android:layout_width="131dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:text="@string/regresar"
        android:textColor="#D6D1D1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcorreo" />
</androidx.constraintlayout.widget.ConstraintLayout>