<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="415dp"
        android:layout_height="746dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/definitvo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:layout_marginTop="68dp"
        android:text="@string/menu"
        android:textColor="#0B0A0A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnmostrar"
        android:layout_width="165dp"
        android:layout_height="54dp"
        android:layout_marginTop="76dp"
        android:text="@string/mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncaptura" />

    <Button
        android:id="@+id/btncaptura"
        android:layout_width="171dp"
        android:layout_height="51dp"
        android:layout_marginTop="68dp"
        android:text="@string/captura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnterminar"
        android:layout_width="171dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:text="@string/terminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmostrar" />
</androidx.constraintlayout.widget.ConstraintLayout>